update the data path
path_proc

--- a/notebooks/00_All-meters-dataset.ipynb
+++ b/notebooks/00_All-meters-dataset.ipynb
@@ -2,125 +2,124 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Building Data Genome 2.0\n",
     "## All-meters datasets creation: hourly and daily timestamp"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Biam! (pic.biam@gmail.com)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from glob import glob"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
    "source": [
     "# Meters data"
-   ]
+   ],
+   "metadata": {
+    "toc-hr-collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "To join all meters raw dataets run the following code."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Data join"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
    "source": [
     "# Write custom path here\n",
-    "path_raw = \"..\\\\data\\\\meters\\\\raw\\\\\"\n",
-    "path_proc = \"..\\\\data\\\\meters\\\\processed\\\\\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# ken: change \\\\ to /\n",
+    "# ken: change processed to cleaned\n",
+    "path_raw = \"../data/meters/raw/\"\n",
+    "path_proc = \"../data/meters/cleaned/\"\n",
+    "\n",
     "# files in directory\n",
-    "files = glob(path_raw + \"*.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+    "files = glob(path_raw + \"*.csv\")\n",
+    "\n",
+    "files"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['..\\\\data\\\\meters\\\\raw\\\\chilledwater.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\electricity.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\gas.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\hotwater.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\irrigation.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\solar.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\steam.csv',\n",
-       " '..\\\\data\\\\meters\\\\raw\\\\water.csv']"
+       "['../data/meters/raw/hotwater.csv',\n",
+       " '../data/meters/raw/gas.csv',\n",
+       " '../data/meters/raw/solar.csv',\n",
+       " '../data/meters/raw/electricity.csv',\n",
+       " '../data/meters/raw/water.csv',\n",
+       " '../data/meters/raw/chilledwater.csv',\n",
+       " '../data/meters/raw/irrigation.csv',\n",
+       " '../data/meters/raw/steam.csv']"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 29
     }
    ],
-   "source": [
-    "files"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
    "source": [
     "dfs = [] # empty list of the dataframes to create\n",
     "for file in files: # for each file in directory\n",
-    "    meter_type = file.split(\"\\\\\")[4].split(\".\")[0] # meter_type to rename the value feature\n",
+    "    meter_type = file.split(\"/\")[4].split(\".\")[0] # meter_type to rename the value feature\n",
     "    meter = pd.read_csv(file) # load the dataset\n",
     "    meter = pd.melt(meter, id_vars = \"timestamp\", var_name = \"building_id\", value_name = \"meter_reading\") # melt dataset\n",
     "    meter[\"meter\"] = str(meter_type) # adds column with the meter type\n",
     "    dfs.append(meter) # append to list\n",
     "complete_data = pd.concat(dfs, axis=0, ignore_index=True) # concatenate all meter\n",
     "del(dfs, meter, file, files, meter_type)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 24,
+   "source": [
+    "complete_data.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "             timestamp            building_id  meter_reading     meter\n",
+       "0  2016-01-01 00:00:00  Robin_public_Carolina         0.2421  hotwater\n",
+       "1  2016-01-01 01:00:00  Robin_public_Carolina         9.7579  hotwater\n",
+       "2  2016-01-01 02:00:00  Robin_public_Carolina         0.0000  hotwater\n",
+       "3  2016-01-01 03:00:00  Robin_public_Carolina         0.0000  hotwater\n",
+       "4  2016-01-01 04:00:00  Robin_public_Carolina        10.0000  hotwater"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -150,66 +149,59 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-01-01 00:00:00</td>\n",
-       "      <td>Panther_office_Clementine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>chilledwater</td>\n",
+       "      <td>Robin_public_Carolina</td>\n",
+       "      <td>0.2421</td>\n",
+       "      <td>hotwater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-01-01 01:00:00</td>\n",
-       "      <td>Panther_office_Clementine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>chilledwater</td>\n",
+       "      <td>Robin_public_Carolina</td>\n",
+       "      <td>9.7579</td>\n",
+       "      <td>hotwater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-01-01 02:00:00</td>\n",
-       "      <td>Panther_office_Clementine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>chilledwater</td>\n",
+       "      <td>Robin_public_Carolina</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>hotwater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-01-01 03:00:00</td>\n",
-       "      <td>Panther_office_Clementine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>chilledwater</td>\n",
+       "      <td>Robin_public_Carolina</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>hotwater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-01-01 04:00:00</td>\n",
-       "      <td>Panther_office_Clementine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>chilledwater</td>\n",
+       "      <td>Robin_public_Carolina</td>\n",
+       "      <td>10.0000</td>\n",
+       "      <td>hotwater</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "             timestamp                building_id  meter_reading         meter\n",
-       "0  2016-01-01 00:00:00  Panther_office_Clementine            NaN  chilledwater\n",
-       "1  2016-01-01 01:00:00  Panther_office_Clementine            NaN  chilledwater\n",
-       "2  2016-01-01 02:00:00  Panther_office_Clementine            NaN  chilledwater\n",
-       "3  2016-01-01 03:00:00  Panther_office_Clementine            NaN  chilledwater\n",
-       "4  2016-01-01 04:00:00  Panther_office_Clementine            NaN  chilledwater"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 24
     }
    ],
-   "source": [
-    "complete_data.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 25,
+   "source": [
+    "# Check the meters\n",
+    "complete_data[\"meter\"].value_counts()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "electricity     27684432\n",
@@ -223,157 +215,152 @@
        "Name: meter, dtype: int64"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 25
     }
    ],
-   "source": [
-    "# Check the meters\n",
-    "complete_data[\"meter\"].value_counts()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 26,
+   "source": [
+    "# Check number of buildings\n",
+    "len(np.unique(complete_data[\"building_id\"]))"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1636"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 26
     }
    ],
-   "source": [
-    "# Check number of buildings\n",
-    "len(np.unique(complete_data[\"building_id\"]))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
    "source": [
     "# Rounds to 4 decimals\n",
     "complete_data[\"meter_reading\"] = round(complete_data[\"meter_reading\"],4)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Hourly timestamp"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Meters reading are currently hourly."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
    "source": [
     "complete_data.to_csv(path_proc + \"allmeters.csv\", index=False)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Daily timestamp"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Daily readings are summarized as the sum of all the readings of that day."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Converts timestamp to datetime object\n",
     "complete_data[\"timestamp\"] = pd.to_datetime(complete_data[\"timestamp\"], format='%Y-%m-%d %H:%M:%S')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "complete_data.info()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Sums all readings per day\n",
     "complete_data = complete_data.groupby(by=[\"building_id\",\"meter\",complete_data['timestamp'].dt.date]).sum()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Reset indexes to ungroup\n",
     "complete_data = complete_data.reset_index()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "complete_data.head()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# export csv\n",
     "complete_data.to_csv(path_proc + \"allmeters_daily.csv\", index=False)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "del complete_data"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('DataScience': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -385,10 +372,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   },
   "toc-showcode": false,
-  "toc-showtags": false
+  "toc-showtags": false,
+  "interpreter": {
+   "hash": "1a9ef3e1a935f9f7868dc2813351b6dfc9d903030cb14a88dc06f3cf944fe1de"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
